# pir2c

./: Cargo.toml  LICENSE  README.md
examples/: hal.rs
src/: i2c.rs  lib.rs
