[package]
name = "pir2c"
version = "0.1.0"
edition = "2021"
keywords = ["embedded-hal"]
license = "MIT"

[dependencies]
thiserror = "1"
pretty-hex = "0.3"
log = "0.4"

serial-core = "0.4"

# using unstable versions which have a better I2C trait
embedded-hal = "=1.0.0-alpha.10"

[dev-dependencies]
env_logger = "0.10"
anyhow = "1"
serial = "0.4"
argh = "0.1"
