[package]
name = "pir2c"
version = "0.1.0"
edition = "2021"
keywords = ["embedded-hal"]
license = "MIT"
authors = ["Matt Johnston <matt@codeconstruct.com.au>"]

[dependencies]
thiserror = "1"
pretty-hex = "0.4"
log = "0.4"

serial-core = "0.4"

embedded-hal = "1.0"

[dev-dependencies]
env_logger = "0.11"
anyhow = "1"
serial = "0.4"
argh = "0.1"
